[project]
name = "simple-iotest"
version = "3.59.4"
description = "A dead simple iotest for HPC environments"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "argparse",
    "tee-logger>=6.22",
]
authors = [
    { name = "Yufei Pan", email = "pan@zopyr.us" }
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: Microsoft :: Windows",
]
license = {text = "GPL-3.0-or-later"}

[project.scripts]
iotest = "iotest:climain"

[project.urls]
"Homepage" = "https://github.com/yufei-pan/simple-iotest"

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
]
