[project]
name = "simple-iotest"
version = "3.61.2"
description = "A dead simple iotest for HPC environments"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "argparse",
    "tee-logger>=6.34",
]
authors = [
    { name = "Yufei Pan", email = "pan@zopyr.us" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: Microsoft :: Windows",
]

[project.scripts]
iotest = "iotest:climain"

[project.urls]
"Homepage" = "https://github.com/yufei-pan/simple-iotest"

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
]
